name:                submarination
version:             0.1.0.0
synopsis:            Submarination Game
license:             BSD3
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Game
build-type:          Simple
cabal-version:       >=1.10

flag use-baked-levels
  default: False
  description:
    Level generation can take a long time. To avoid unacceptable
    time starting the game, the game can be compiled with pregenerated levels. By
    default this is turned off for development.

flag gif
  default: False
  description:
    Compile with GIF-generation support.
    Useful for crisp GIF generation that look awesome, especially good for
    raking in reddit karma

library
  exposed-modules:    Submarination
                      Submarination.Biome.Gen
                      Submarination.Biome.IntertidalZone
                      Submarination.Creature
                      Submarination.Direction
                      Submarination.GameState
                      Submarination.GameState.Types
                      Submarination.Index
                      Submarination.Item
                      Submarination.Key
                      Submarination.MonotonicClock
                      Submarination.Level
                      Submarination.Plural
                      Submarination.QuadTree
                      Submarination.Random
                      Submarination.Random.Common
                      Submarination.Render
                      Submarination.Sub
                      Submarination.Tension
                      Submarination.Turn
                      Submarination.Vendor
                      Submarination.Voronoi
                      Submarination.Terminal
                      Submarination.Terminal.Common

  if flag(use-baked-levels)
    cpp-options:       -DUSE_BAKED_LEVELS
    exposed-modules:   Submarination.Biome.IntertidalZoneGen

  if flag(gif)
    cpp-options:       -DGIF
    exposed-modules:   Submarination.Terminal.Gif
    build-depends:     cairo
                      ,pango       >= 0.13
                      ,JuicyPixels >= 3.2

  if impl(ghcjs)
    cpp-options:       -DGHCJS_BROWSER
    exposed-modules:   Submarination.Random.GHCJS
                       Submarination.Terminal.GHCJS
    build-depends:     ghcjs-base
  else
    exposed-modules:   Submarination.Random.Native
                       Submarination.Terminal.Unix

  build-depends:       AC-Vector
                      ,ansi-terminal
                      ,array
                      ,async
                      ,base >=4.9 && <5.0
                      ,binary
                      ,bytestring
                      ,clock
                      ,containers
                      ,criterion
                      ,deepseq
                      ,delaunay>=0.1.0.2
                      ,gitrev
                      ,hashable
                      ,lens
                      ,linear
                      ,mtl
                      ,mwc-random
                      ,primitive>=0.6.1.0
                      ,protolude
                      ,stm
                      ,QuickCheck >=2.8
                      ,test-framework
                      ,test-framework-quickcheck2>=0.3.0.4
                      ,text
                      ,transformers
                      ,vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010
  c-sources:           cbits/terminal.c
  default-extensions:  GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       UndecidableInstances
                       ScopedTypeVariables
                       DeriveDataTypeable
                       FlexibleInstances
                       NoImplicitPrelude
                       OverloadedStrings
                       DeriveTraversable
                       FlexibleContexts
                       TemplateHaskell
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       BangPatterns
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       RankNTypes

executable submarination
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0
                      ,submarination
                      ,protolude
  hs-source-dirs:      exe
  ghc-options:         -Wall -fno-warn-name-shadowing -rtsopts -threaded "-with-rtsopts=-N"
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       UndecidableInstances
                       ScopedTypeVariables
                       DeriveDataTypeable
                       DeriveTraversable
                       FlexibleInstances
                       NoImplicitPrelude
                       OverloadedStrings
                       FlexibleContexts
                       TemplateHaskell
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       BangPatterns
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       RankNTypes

test-suite submarination-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0
                      ,submarination
                      ,protolude
                      ,test-framework
                      ,test-framework-quickcheck2
  hs-source-dirs:      tests
  ghc-options:         -Wall -fno-warn-name-shadowing -rtsopts -threaded
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       UndecidableInstances
                       ScopedTypeVariables
                       DeriveDataTypeable
                       FlexibleInstances
                       NoImplicitPrelude
                       OverloadedStrings
                       DeriveTraversable
                       FlexibleContexts
                       TemplateHaskell
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       BangPatterns
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       RankNTypes

benchmark submarination-benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0
                      ,criterion
                      ,submarination
                      ,protolude
  hs-source-dirs:      benchmarks
  ghc-options:         -Wall -fno-warn-name-shadowing -rtsopts -threaded
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       UndecidableInstances
                       ScopedTypeVariables
                       DeriveDataTypeable
                       FlexibleInstances
                       NoImplicitPrelude
                       DeriveTraversable
                       OverloadedStrings
                       FlexibleContexts
                       TemplateHaskell
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       BangPatterns
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       RankNTypes
